src/app/warehouse/warehouse.component.css
/* warehouse.component.css */

.item-grid {
    display: flex;
    flex-wrap: wrap;
  }
  
  .item {
    width: 20%; /* Set the width to 20% for smaller items and multiple columns */
    box-sizing: border-box;
    padding: 10px;
  }
  
  .row {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }
  
  .mat-card {
    width: 100%; /* Ensure the card takes the full width of its container */
  }
  
  .header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  
  .delete-button-container {
    margin-right: 20px; /* Adjust the margin as needed */
  }
  mat-grid-tile {
    background: lightblue;
  }
  ::ng-deep .mat-grid-tile-content {
    top: unset;
    left: unset;
    right: unset;
    bottom: unset;
    position: relative; /* Change this to relative if you want to remove absolute positioning */
    display: flex !important;
    align-items: start !important; /* Adjust this to your needs */
    justify-content: start !important; /* Adjust this to your needs */
    height: unset;
    padding: unset;
    margin: unset;
  }

